@@ -6,7 +6,9 @@ CHANGELOG RoundCube Webmail
 - Fix regular expression for checking e-mail address (#1484710)
 - Make sending of read receipts configurable
 - Respect config when localize folder names (#1484707)
-- Aplied patch for updating page title (#1484727, #1484650)
+- Applied patch for updating page title (#1484727, #1484650)
+- Applied patch to prevent from purging inbox by uberlinuxguy (#1484449)
+- Add CSS hack for Safari
 
 2008/02/02 (thomasb)
 ----------
